# big-data-platforms-via-hadoop

./: .gitignore  README.md  docker-compose.yml
cluster/: .gitignore  README.md  docker-compose.yml  fix-hadoop-cluster.sh
cluster/config/: core-site.xml  hdfs-site-datanode1.xml  hdfs-site-datanode2.xml  hdfs-site.xml  mapred-site.xml  my.cnf  nifi.properties  spark-defaults.conf  spark-env.sh  yarn-site.xml
cluster/download/: download.sh
cluster/images/: Dockerfile.base  Dockerfile.datanode  Dockerfile.mysql  Dockerfile.namenode  Dockerfile.nifi  Dockerfile.nodemanager  Dockerfile.resourcemanager  Dockerfile.spark-base  Dockerfile.spark-master  Dockerfile.spark-worker
cluster/scripts/: entrypoint-datanode.sh  entrypoint-namenode.sh  entrypoint-nodemanager.sh  entrypoint-resourcemanager.sh  init-mysql.sh
cluster/tests/: README.md  hdfs_crud_test.py
ingest/: .env.example  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  main.py  requirements.txt  seed.py
ingest/api/: admin.py
ingest/config/: settings.py
ingest/data/: seed_feeds.sql
ingest/db/: database.py  init_db.py
ingest/models/: base.py
ingest/schemas/: article.py  category.py  (+2 more)
orchestration/: README.md
transform/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt  run_scheduler.sh  scheduler.py  trending_words_job.py
transform/keywords/: .gitignore  MANIFEST.in  README.md  __init__.py  pyproject.toml  stopwords_vi.txt  tokenizer_handler.py  trending_words_job.py
transform/keywords/e2e/: 02_run_job.sh
transform/keywords/tests/: test_tokenizer_handler.py
(+28 files in other folders)
